Fix cover not centered in mobile

--- a/static/css/components/list-books.less
+++ b/static/css/components/list-books.less
@@ -18,10 +18,13 @@
     .display-flex();
   }
 
+  .bookcover {
+    margin: 0 auto;
+  }
+
   .bookcover.nocover {
     max-width: 180px;
     aspect-ratio: 2/3;
-    margin: auto;
 
     @media only screen and (max-width: @width-breakpoint-tablet) {
       width: 175px;
